Ajuste no Model, Service e Dto